<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E7EAEA"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textAlignment="center"
            android:textSize="70sp" />

        <EditText
            android:id="@+id/input"
            android:layout_width="411dp"
            android:layout_height="75dp"
            android:background="@color/white"
            android:textAlignment="viewEnd"
            android:textColor="@color/black"
            android:text="@string/display"
            android:textSize="65dp" />

        <TableLayout
            android:layout_width="413dp"
            android:layout_height="453dp">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/percBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/percentage" />

                <Button
                    android:id="@+id/ceBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/ce" />

                <Button
                    android:id="@+id/cBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/c" />

                <Button
                    android:id="@+id/delBtn"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/delete" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/fracBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/fraction" />

                <Button
                    android:id="@+id/sqrBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/square" />

                <Button
                    android:id="@+id/sqrtBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/squareroot" />

                <Button
                    android:id="@+id/divideBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/divide" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/sevenBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/seven" />

                <Button
                    android:id="@+id/eightBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/eight" />

                <Button
                    android:id="@+id/nineBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/nine" />

                <Button
                    android:id="@+id/multiplyBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/multiply" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/fourBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/four" />

                <Button
                    android:id="@+id/fiveBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/five" />

                <Button
                    android:id="@+id/sixBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/six" />

                <Button
                    android:id="@+id/subtractBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/subtract" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/oneBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/one" />

                <Button
                    android:id="@+id/twoBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/two" />

                <Button
                    android:id="@+id/threeBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/three" />

                <Button
                    android:id="@+id/addBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#E5E5E5"
                    android:text="@string/add" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/signBtn"
                    android:layout_width="103dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/sign" />

                <Button
                    android:id="@+id/zeroBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/zero" />

                <Button
                    android:id="@+id/dotBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#EEEEEE"
                    android:text="@string/dot" />

                <Button
                    android:id="@+id/equalBtn"
                    android:layout_width="102dp"
                    android:layout_height="75dp"
                    android:background="#3F51B5"
                    android:text="@string/equals"
                    android:textColor="@color/white" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>